// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card render bottom 1`] = `
<DocumentFragment>
  .c0.mul-card {
  position: relative;
  box-sizing: border-box;
  padding: 0.5rem 1rem;
  color: #323233;
  font-size: 0.75rem;
  background-color: #fafafa;
}

.c0.mul-card:not(:first-child) {
  margin-top: 0.5rem;
}

.c0.mul-card .mul-card__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.mul-card .mul-card__thumb {
  position: relative;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 5.5rem;
  height: 5.5rem;
  margin-right: 0.5rem;
}

.c0.mul-card .mul-card__thumb img {
  border-radius: 0.5rem;
}

.c0.mul-card .mul-card__content {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 0;
  min-height: 5.5rem;
}

.c0.mul-card .mul-card__content--centered {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0.mul-card .mul-card__title,
.c0.mul-card .mul-card__desc {
  word-wrap: break-word;
}

.c0.mul-card .mul-card__title {
  max-height: 2rem;
  font-weight: $font_weight_bold;
  line-height: 1rem;
}

.c0.mul-card .mul-card__desc {
  max-height: 1.25rem;
  color: #646566;
  line-height: 1.25rem;
}

.c0.mul-card .mul-card__bottom {
  line-height: $line_height_md;
}

.c0.mul-card .mul-card__price {
  display: inline-block;
  color: #323233;
  font-weight: 500;
  font-size: 0.75rem;
}

.c0.mul-card .mul-card__price-integer {
  font-size: 1rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__price-decimal {
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__origin-price {
  display: inline-block;
  margin-left: 0.3125rem;
  color: #969799;
  font-size: 0.625rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c0.mul-card .mul-card__num {
  float: right;
  color: #969799;
}

.c0.mul-card .mul-card__tag {
  position: absolute;
  top: 0.125rem;
  left: 0;
}

.c0.mul-card .mul-card__footer {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  text-align: right;
}

.c0.mul-card .mul-card__footer .mul-button {
  margin-left: 0.3125rem;
}

<div
    class="c0 mul-card"
  >
    <div
      class="mul-card__header"
    >
      <div
        class="mul-card__content"
      >
        <div />
        <div
          class="mul-card__bottom"
        >
          Custom Bottom
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card render origin-price 1`] = `
<DocumentFragment>
  .c0.mul-card {
  position: relative;
  box-sizing: border-box;
  padding: 0.5rem 1rem;
  color: #323233;
  font-size: 0.75rem;
  background-color: #fafafa;
}

.c0.mul-card:not(:first-child) {
  margin-top: 0.5rem;
}

.c0.mul-card .mul-card__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.mul-card .mul-card__thumb {
  position: relative;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 5.5rem;
  height: 5.5rem;
  margin-right: 0.5rem;
}

.c0.mul-card .mul-card__thumb img {
  border-radius: 0.5rem;
}

.c0.mul-card .mul-card__content {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 0;
  min-height: 5.5rem;
}

.c0.mul-card .mul-card__content--centered {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0.mul-card .mul-card__title,
.c0.mul-card .mul-card__desc {
  word-wrap: break-word;
}

.c0.mul-card .mul-card__title {
  max-height: 2rem;
  font-weight: $font_weight_bold;
  line-height: 1rem;
}

.c0.mul-card .mul-card__desc {
  max-height: 1.25rem;
  color: #646566;
  line-height: 1.25rem;
}

.c0.mul-card .mul-card__bottom {
  line-height: $line_height_md;
}

.c0.mul-card .mul-card__price {
  display: inline-block;
  color: #323233;
  font-weight: 500;
  font-size: 0.75rem;
}

.c0.mul-card .mul-card__price-integer {
  font-size: 1rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__price-decimal {
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__origin-price {
  display: inline-block;
  margin-left: 0.3125rem;
  color: #969799;
  font-size: 0.625rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c0.mul-card .mul-card__num {
  float: right;
  color: #969799;
}

.c0.mul-card .mul-card__tag {
  position: absolute;
  top: 0.125rem;
  left: 0;
}

.c0.mul-card .mul-card__footer {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  text-align: right;
}

.c0.mul-card .mul-card__footer .mul-button {
  margin-left: 0.3125rem;
}

<div
    class="c0 mul-card"
  >
    <div
      class="mul-card__header"
    >
      <div
        class="mul-card__content"
      >
        <div />
        <div
          class="mul-card__bottom"
        >
          <div
            class="mul-card__origin-price"
          >
            ¥ Custom Origin Price
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card render price & num 1`] = `
<DocumentFragment>
  .c0.mul-card {
  position: relative;
  box-sizing: border-box;
  padding: 0.5rem 1rem;
  color: #323233;
  font-size: 0.75rem;
  background-color: #fafafa;
}

.c0.mul-card:not(:first-child) {
  margin-top: 0.5rem;
}

.c0.mul-card .mul-card__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.mul-card .mul-card__thumb {
  position: relative;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 5.5rem;
  height: 5.5rem;
  margin-right: 0.5rem;
}

.c0.mul-card .mul-card__thumb img {
  border-radius: 0.5rem;
}

.c0.mul-card .mul-card__content {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 0;
  min-height: 5.5rem;
}

.c0.mul-card .mul-card__content--centered {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0.mul-card .mul-card__title,
.c0.mul-card .mul-card__desc {
  word-wrap: break-word;
}

.c0.mul-card .mul-card__title {
  max-height: 2rem;
  font-weight: $font_weight_bold;
  line-height: 1rem;
}

.c0.mul-card .mul-card__desc {
  max-height: 1.25rem;
  color: #646566;
  line-height: 1.25rem;
}

.c0.mul-card .mul-card__bottom {
  line-height: $line_height_md;
}

.c0.mul-card .mul-card__price {
  display: inline-block;
  color: #323233;
  font-weight: 500;
  font-size: 0.75rem;
}

.c0.mul-card .mul-card__price-integer {
  font-size: 1rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__price-decimal {
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__origin-price {
  display: inline-block;
  margin-left: 0.3125rem;
  color: #969799;
  font-size: 0.625rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c0.mul-card .mul-card__num {
  float: right;
  color: #969799;
}

.c0.mul-card .mul-card__tag {
  position: absolute;
  top: 0.125rem;
  left: 0;
}

.c0.mul-card .mul-card__footer {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  text-align: right;
}

.c0.mul-card .mul-card__footer .mul-button {
  margin-left: 0.3125rem;
}

<div
    class="c0 mul-card"
  >
    <div
      class="mul-card__header"
    >
      <div
        class="mul-card__content"
      >
        <div />
        <div
          class="mul-card__bottom"
        >
          <div
            class="mul-card__price"
          >
            <div>
              <span
                class="mul-card__price-currency"
              >
                ¥
              </span>
              <span
                class="mul-card__price-integer"
              >
                Custom Price
              </span>
              .
              <span
                class="mul-card__price-decimal"
              />
            </div>
          </div>
          <div
            class="mul-card__num"
          >
            xCustom Num
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card render price & priceTop 1`] = `
<DocumentFragment>
  .c0.mul-card {
  position: relative;
  box-sizing: border-box;
  padding: 0.5rem 1rem;
  color: #323233;
  font-size: 0.75rem;
  background-color: #fafafa;
}

.c0.mul-card:not(:first-child) {
  margin-top: 0.5rem;
}

.c0.mul-card .mul-card__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.mul-card .mul-card__thumb {
  position: relative;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 5.5rem;
  height: 5.5rem;
  margin-right: 0.5rem;
}

.c0.mul-card .mul-card__thumb img {
  border-radius: 0.5rem;
}

.c0.mul-card .mul-card__content {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 0;
  min-height: 5.5rem;
}

.c0.mul-card .mul-card__content--centered {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0.mul-card .mul-card__title,
.c0.mul-card .mul-card__desc {
  word-wrap: break-word;
}

.c0.mul-card .mul-card__title {
  max-height: 2rem;
  font-weight: $font_weight_bold;
  line-height: 1rem;
}

.c0.mul-card .mul-card__desc {
  max-height: 1.25rem;
  color: #646566;
  line-height: 1.25rem;
}

.c0.mul-card .mul-card__bottom {
  line-height: $line_height_md;
}

.c0.mul-card .mul-card__price {
  display: inline-block;
  color: #323233;
  font-weight: 500;
  font-size: 0.75rem;
}

.c0.mul-card .mul-card__price-integer {
  font-size: 1rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__price-decimal {
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__origin-price {
  display: inline-block;
  margin-left: 0.3125rem;
  color: #969799;
  font-size: 0.625rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c0.mul-card .mul-card__num {
  float: right;
  color: #969799;
}

.c0.mul-card .mul-card__tag {
  position: absolute;
  top: 0.125rem;
  left: 0;
}

.c0.mul-card .mul-card__footer {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  text-align: right;
}

.c0.mul-card .mul-card__footer .mul-button {
  margin-left: 0.3125rem;
}

<div
    class="c0 mul-card"
  >
    <div
      class="mul-card__header"
    >
      <div
        class="mul-card__content"
      >
        <div />
        <div
          class="mul-card__bottom"
        >
          Custom Price-top
          <div
            class="mul-card__price"
          >
            <div>
              <span
                class="mul-card__price-currency"
              >
                ¥
              </span>
              <span
                class="mul-card__price-integer"
              >
                Custom Price
              </span>
              .
              <span
                class="mul-card__price-decimal"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card render thumb & tag 1`] = `
<DocumentFragment>
  .c0.mul-card {
  position: relative;
  box-sizing: border-box;
  padding: 0.5rem 1rem;
  color: #323233;
  font-size: 0.75rem;
  background-color: #fafafa;
}

.c0.mul-card:not(:first-child) {
  margin-top: 0.5rem;
}

.c0.mul-card .mul-card__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.mul-card .mul-card__thumb {
  position: relative;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 5.5rem;
  height: 5.5rem;
  margin-right: 0.5rem;
}

.c0.mul-card .mul-card__thumb img {
  border-radius: 0.5rem;
}

.c0.mul-card .mul-card__content {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 0;
  min-height: 5.5rem;
}

.c0.mul-card .mul-card__content--centered {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0.mul-card .mul-card__title,
.c0.mul-card .mul-card__desc {
  word-wrap: break-word;
}

.c0.mul-card .mul-card__title {
  max-height: 2rem;
  font-weight: $font_weight_bold;
  line-height: 1rem;
}

.c0.mul-card .mul-card__desc {
  max-height: 1.25rem;
  color: #646566;
  line-height: 1.25rem;
}

.c0.mul-card .mul-card__bottom {
  line-height: $line_height_md;
}

.c0.mul-card .mul-card__price {
  display: inline-block;
  color: #323233;
  font-weight: 500;
  font-size: 0.75rem;
}

.c0.mul-card .mul-card__price-integer {
  font-size: 1rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__price-decimal {
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__origin-price {
  display: inline-block;
  margin-left: 0.3125rem;
  color: #969799;
  font-size: 0.625rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c0.mul-card .mul-card__num {
  float: right;
  color: #969799;
}

.c0.mul-card .mul-card__tag {
  position: absolute;
  top: 0.125rem;
  left: 0;
}

.c0.mul-card .mul-card__footer {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  text-align: right;
}

.c0.mul-card .mul-card__footer .mul-button {
  margin-left: 0.3125rem;
}

.c3.mul-tag {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  color: #fff;
  font-size: 0.75rem;
  line-height: 1rem;
  border-radius: 0.125rem;
}

.c3.mul-tag--default {
  background-color: #969799;
}

.c3.mul-tag--default.mul-tag--plain {
  color: #969799;
}

.c3.mul-tag--danger {
  background-color: #fa220a;
}

.c3.mul-tag--danger.mul-tag--plain {
  color: #fa220a;
}

.c3.mul-tag--primary {
  background-color: #108ee9;
}

.c3.mul-tag--primary.mul-tag--plain {
  color: #108ee9;
}

.c3.mul-tag--success {
  background-color: #07c160;
}

.c3.mul-tag--success.mul-tag--plain {
  color: #07c160;
}

.c3.mul-tag--warning {
  background-color: #ff976a;
}

.c3.mul-tag--warning.mul-tag--plain {
  color: #ff976a;
}

.c3.mul-tag--plain {
  background-color: #fff;
}

.c3.mul-tag--plain::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 0.0625rem solid currentColor;
  border-radius: inherit;
  content: '';
  pointer-events: none;
}

.c3.mul-tag--medium {
  padding: 0.125rem 0.375rem;
}

.c3.mul-tag--large {
  padding: 0.25rem 0.5rem;
  font-size: 0.875rem;
  border-radius: 0.25rem;
}

.c3.mul-tag--mark {
  border-radius: 0 62.4375rem 62.4375rem 0;
}

.c3.mul-tag--mark::after {
  display: block;
  width: 0.125rem;
  content: '';
}

.c3.mul-tag--round {
  border-radius: 62.4375rem;
}

.c3.mul-tag .mul-tag__close {
  min-width: 1em;
  margin-left: 0.125rem;
  cursor: pointer;
}

.c1.mul-image {
  position: relative;
  display: inline-block;
}

.c1.mul-image--round {
  overflow: hidden;
  border-radius: 50%;
}

.c1.mul-image--round img {
  border-radius: inherit;
}

.c1.mul-image .mul-image__img,
.c1.mul-image .mul-image__error,
.c1.mul-image .mul-image__loading {
  display: block;
  width: 100%;
  height: 100%;
}

.c1.mul-image .mul-image__error,
.c1.mul-image .mul-image__loading {
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #969799;
  font-size: 0.875rem;
  background-color: #f7f8fa;
}

.c1.mul-image .mul-image__loading-icon {
  font-size: 1.375rem;
}

.c1.mul-image .mul-image__error-icon {
  font-size: 1.375rem;
}

.c2.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c2.mul-icon::before {
  display: inline-block;
}

.c2.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c2.mul-icon-photo::before {
  content: '\\F09D';
}

<div
    class="c0 mul-card"
  >
    <div
      class="mul-card__header"
    >
      <a
        class="mul-card__thumb"
      >
        <div
          class="c1 mul-image"
          style="width: 100%; height: 100%;"
        >
          <img
            class="mul-image__img"
            src="Custom Thumb"
            style="object-fit: cover;"
          />
          <div
            class="mul-image__loading"
          >
            <i
              class="c2 mul-image__loading-icon mul-image__loading-icon-photo"
              content="F09D"
              name="photo"
              style="font-size: 1.25rem;"
            />
          </div>
        </div>
        <div
          class="mul-card__tag"
        >
          <span
            class="c3 mul-tag mul-tag--mark mul-tag--danger"
          >
            Custom Tag
          </span>
        </div>
      </a>
      <div
        class="mul-card__content"
      >
        <div />
        <div
          class="mul-card__bottom"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card render title & desc 1`] = `
<DocumentFragment>
  .c0.mul-card {
  position: relative;
  box-sizing: border-box;
  padding: 0.5rem 1rem;
  color: #323233;
  font-size: 0.75rem;
  background-color: #fafafa;
}

.c0.mul-card:not(:first-child) {
  margin-top: 0.5rem;
}

.c0.mul-card .mul-card__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.mul-card .mul-card__thumb {
  position: relative;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 5.5rem;
  height: 5.5rem;
  margin-right: 0.5rem;
}

.c0.mul-card .mul-card__thumb img {
  border-radius: 0.5rem;
}

.c0.mul-card .mul-card__content {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 0;
  min-height: 5.5rem;
}

.c0.mul-card .mul-card__content--centered {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0.mul-card .mul-card__title,
.c0.mul-card .mul-card__desc {
  word-wrap: break-word;
}

.c0.mul-card .mul-card__title {
  max-height: 2rem;
  font-weight: $font_weight_bold;
  line-height: 1rem;
}

.c0.mul-card .mul-card__desc {
  max-height: 1.25rem;
  color: #646566;
  line-height: 1.25rem;
}

.c0.mul-card .mul-card__bottom {
  line-height: $line_height_md;
}

.c0.mul-card .mul-card__price {
  display: inline-block;
  color: #323233;
  font-weight: 500;
  font-size: 0.75rem;
}

.c0.mul-card .mul-card__price-integer {
  font-size: 1rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__price-decimal {
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
}

.c0.mul-card .mul-card__origin-price {
  display: inline-block;
  margin-left: 0.3125rem;
  color: #969799;
  font-size: 0.625rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c0.mul-card .mul-card__num {
  float: right;
  color: #969799;
}

.c0.mul-card .mul-card__tag {
  position: absolute;
  top: 0.125rem;
  left: 0;
}

.c0.mul-card .mul-card__footer {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  text-align: right;
}

.c0.mul-card .mul-card__footer .mul-button {
  margin-left: 0.3125rem;
}

<div
    class="c0 mul-card"
  >
    <div
      class="mul-card__header"
    >
      <div
        class="mul-card__content"
      >
        <div>
          <div
            class="mul-card__title mul-multi-ellipsis--l2"
          >
            Custom Title
          </div>
          <div
            class="mul-card__desc mul-ellipsis"
          >
            Custom desc
          </div>
        </div>
        <div
          class="mul-card__bottom"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
